# Zephyrus

./: .gitignore  .gitmodules  CMakeLists.cmake  CMakeLists.txt  CMakeLists2.txt  model.hdf5  qqq
CMake/: CMakeLists.txt  MLIRConfig.cmake  packaging.cmake  tests.cmake
include/Passes/: CMakeLists.txt  HDF5ToTosaPass.h  Passes.h  TosaToLLVMPass.h
include/Passes/handlers/: Conv2DHandler.h  DenseAttr.h  DenseHandler.h  FlattenHandler.h  LayerHandler.h  MaxPool2DHandler.h  ReLUHandler.h  ReadModel.h  SoftmaxHandler.h
include/zephyrus/: Zephyrus.h
lib/: CMakeLists.txt
lib/Passes/: CMakeLists.txt  HDF5ToTosaPass.cpp  Passes.cpp  TosaToLLVMPass.cpp
lib/Passes/handlers/: Conv2DHandler.cpp  DenseAttr.cpp  DenseHandler.cpp  FlattenHandler.cpp  MaxPool2DHandler.cpp  ReLUHandler.cpp  ReadModel.cpp  SoftmaxHandler.cpp
runtime/: .gitignore
scripts/: clear_build.sh
src/: CMakeLists.txt  main.cpp
tools/zephyrus/: CMakeLists.txt  main.cpp
